# eazure

./: README.md  install_packages.bat  pyproject.toml
src/eazure/: __init__.py  access.py  examples.py  files.py  tables.py
